--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-﻿annotated-types==0.7.0
+absl-py==2.1.0
+annotated-types==0.7.0
 anyio==4.6.0
 asttokens==2.4.1
+astunparse==1.6.3
 beautifulsoup4==4.12.3
 blinker==1.8.2
 bs4==0.0.2
@@ -15,13 +17,21 @@ debugpy==1.8.5
 decorator==5.1.1
 distro==1.9.0
 executing==2.1.0
+filelock==3.16.1
 Flask==3.0.3
+flatbuffers==24.3.25
+fsspec==2024.9.0
+gast==0.6.0
 gcloud==0.18.3
+google-pasta==0.2.0
 googleapis-common-protos==1.65.0
+grpcio==1.66.2
 h11==0.14.0
+h5py==3.12.1
 httpcore==1.0.6
 httplib2==0.22.0
 httpx==0.27.2
+huggingface-hub==0.25.2
 idna==3.10
 ipykernel==6.29.5
 ipython==8.27.0
@@ -33,19 +43,31 @@ joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 jwcrypto==1.5.6
+keras==3.6.0
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml-dtypes==0.4.1
+mpmath==1.3.0
+namex==0.0.8
 nest-asyncio==1.6.0
+networkx==3.4.1
 nltk==3.9.1
-numpy==2.1.2
+numpy==1.26.4
 oauth2client==4.1.3
 openai==1.51.0
+opt_einsum==3.4.0
+optree==0.13.0
 packaging==24.1
 parso==0.8.4
 pdfminer.six==20240706
+pillow==10.4.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.47
-protobuf==5.29.0rc1
+protobuf==4.25.5
 psutil==6.0.0
 pure_eval==0.2.3
 pyasn1==0.6.1
@@ -63,24 +85,40 @@ PyPDF2==3.0.1
 Pyrebase4==4.8.0
 python-dateutil==2.9.0.post0
 python-jwt==4.1.0
+PyYAML==6.0.2
 pyzmq==26.2.0
 RapidFuzz==3.10.0
 regex==2024.9.11
 requests==2.32.3
 requests-toolbelt==0.10.1
+rich==13.9.2
 rsa==4.9
+safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
+sentence-transformers==3.2.0
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
+sympy==1.13.3
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.5.0
+tf_keras==2.17.0
 threadpoolctl==3.5.0
+tokenizers==0.20.1
+torch==2.4.1
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
 traits==6.4.3
+transformers==4.45.2
 typing_extensions==4.12.2
 urllib3==1.26.20
 wcwidth==0.2.13
 Werkzeug==3.0.4
+wrapt==1.16.0
